--- a/package.json
+++ b/package.json
@@ -2,27 +2,36 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc --watch",
     "start": "node ./dist/app.js",
     "start2": "nodemon ./dist/app.js",
     "build": "tsc",
-    "dev":"npm-run-all --parallel watch start2"
+    "dev": "npm-run-all --parallel watch start2"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/http-errors": "^2.0.1",
     "@types/node": "^18.11.9",
+    "@types/validator": "^13.7.10",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "http-errors": "^2.0.0",
+    "mysql2": "^2.3.3",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.25.5",
+    "sequelize-typescript": "^2.1.5"
   }
 }
