--- a/tsconfig.json
+++ b/tsconfig.json
@@ -114,7 +114,7 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*.ts", "custom.d.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
  
 }
