--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.9",
+    "@types/stripe": "^8.0.417",
     "@types/validator": "^13.7.10",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
@@ -39,6 +40,7 @@
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.25.5",
-    "sequelize-typescript": "^2.1.5"
+    "sequelize-typescript": "^2.1.5",
+    "stripe": "^11.1.0"
   }
 }
